tests/specs/ecosystem/huw/dist/0_1_1.test
huw/dist/0.1.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export default function plot(sample: number[]): ((HTMLElement | SVGSVGElement) & PlotType) & {
                                                  ~~~~~~~~~~~
    at file://<tmpdir>/plot.ts:2:51

TS2304 [ERROR]: Cannot find name 'SVGSVGElement'.
export default function plot(sample: number[]): ((HTMLElement | SVGSVGElement) & PlotType) & {
                                                                ~~~~~~~~~~~~~
    at file://<tmpdir>/plot.ts:2:65

Found 2 errors.

